--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
             margin: 10px;
             font-size: 16px;
             cursor: pointer;
-            background-color: #ec2005;
+            background-color: #0590ec;
             color: white;
             border: none;
             border-radius: 5px;
